# max-mcp

./: .env.example  README.md  pyproject.toml
max_mcp/: api.py  server.py
